# python-template-with-rye

./: .pre-commit-config.yaml  .yamllint  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-auto-merge.yml  lint.yml  tests.yml
src/: hello_world.py
src/python_template_with_rye/: __init__.py
tests/: test_hello_world.py
